-FIX: product loop display on mobile devices and wide screens

--- a/style-sheet.scss
+++ b/style-sheet.scss
@@ -52,6 +52,9 @@ input#menu-search.basileia-search {
 
 }
 body #content {
+    span.price{
+        min-height: 44px;
+    }
     .featured-entries-col{
         .star-rating{
             display: none!important;
@@ -65,6 +68,7 @@ body #content {
         }
         span.price {
             height: 35px;
+
         }
         
     }
@@ -165,21 +169,18 @@ body #content {
         //===============================
         //-----------Loop itens----------
         //===============================
-        ul.products.columns-4 li.product{
+        ul.products li.product{
             margin: 0 1% 2.992em 0;
             width: 24%;
 
-            a img.attachment-woocommerce_thumbnail.size-woocommerce_thumbnail {
+           /* a img.attachment-woocommerce_thumbnail.size-woocommerce_thumbnail {
                 height: auto;
                 width: auto;
                 max-width: 200px;
                 max-height: 270px;
                 margin: 0 0 1em !important;
                 display: inline;
-           }
-           .loop-img {
-            height: 274px;
-            }
+           }*/
             a.woocommerce-LoopProduct-link.woocommerce-loop-product__link {
                 display: flex;
                 flex-direction: column;
@@ -357,3 +358,4 @@ body #content {
 }
 
 @import 'mobile.scss';
+@import 'media-min-768.scss';
